--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,6 @@
 <article class="post">
       <div class="title">
-        <a href="{{post_text}}" target="_blank">{{title}}</a>
+        <a href="/post/{{id}}" target="_blank">{{title}}</a>
         <span>({{format_url post_text}})</span>
       </div>
       <div class="meta">
