--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,10 +7,10 @@
       <input type="text" id="recipe-title" name="recipe-title" />
     </div>
     <div>
-      <label for="recipe-url">Link</label>
+      <label for="recipe-url">Ingredients</label>
       <input id="recipe-url" name="recipe-url" />
     </div>
-    <button type="submit" class="btn">Create</button>
+    <button type="submit" class="btn">Add Recipe</button>
   </form>
 </section>
 
