--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,15 +17,15 @@
         </h1>
 
         <nav>
-            {{!-- {{#if loggedIn}} --}}
+            {{#if loggedIn}}
             <a href="/dashboard">dashboard</a>
             <button id="logout" class="btn-no-style">logout</button>
-            {{!-- {{else}} --}}
+            {{else}}
             <a href="/login">login</a>
-            {{!-- {{/if}} --}}
+            {{/if}}
             <button id="search-btn">Search</button>
             <input type="text" id="search-input" />
-            
+
 
         </nav>
     </header>
@@ -34,9 +34,14 @@
         {{{body}}}
     </main>
 
-    {{!-- {{#if loggedIn}} --}}
+
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
+
+    {{#if loggedIn}}
     <script src="/javascript/edamam-api.js"></script>
-    {{!-- {{/if}} --}}
+    {{/if}}
 
 </body>
 
