--- a/public/stylesheet/style.css
+++ b/public/stylesheet/style.css
@@ -78,7 +78,7 @@ body {
   padding: 20px;
   cursor: pointer;
 }
-© 2022 GitHub, Inc.
+/* © 2022 GitHub, Inc.
 Footer navigation
 Terms
 Privacy
@@ -90,4 +90,4 @@ Pricing
 API
 Training
 Blog
-About
+About */
