--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
     </div>
     <div>
       <label for="recipe-url">Ingredients</label>
-      <input id="recipe-url" name="recipe-url" />
+      <input id="post-text" name="post-text" />
     </div>
     <button type="submit" class="btn">Add Recipe</button>
   </form>
