added handlebars for recipe create

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,9 +6,15 @@
       <label for="recipe-title">Title</label>
       <input type="text" id="recipe-title" name="recipe-title" />
     </div>
-    <div>
+    <div id="ingredients">
       <label for="recipe-url">Ingredients</label>
       <input id="post-text" name="post-text" />
+      <button id="add-ingredient">Add Another Ingredient</button>
+    </div>
+    <div id="steps">
+      <label for="steps">Steps</label>
+      <input type="text" id="post-text" name="post-text" />
+      <button id="add-step">Add Another Step</button>
     </div>
     <button type="submit" class="btn">Add Recipe</button>
   </form>
