--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 
         <nav>
             {{#if loggedIn}}
-            <a href="/dashboard">dashboard</a>
+            <a href="/dashboard" id="dashboard">dashboard</a>
             <button id="logout" class="btn-no-style">logout</button>
             {{else}}
             <a href="/login">login</a>
