--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Just Recipes</title>
-    <link rel="stylesheet" href="/stylesheet/style.css">
+    {{!-- <link rel="stylesheet" href="/stylesheet/style.css"> --}}
 </head>
 
 <body>
