getting new db info

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -10,8 +10,209 @@
       <label for="recipe-url">Link</label>
       <input id="recipe-url" name="recipe-url" />
     </div>
+
+
+<ul uk-accordion="multiple: true">
+    <li class="uk-open">
+        <a class="uk-accordion-title" href="#">Step 1</a>
+        <div class="uk-accordion-content">
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+           </div>
+    </li>
+    <li>
+        <a class="uk-accordion-title" href="#">Step 2</a>
+        <div class="uk-accordion-content">
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+        </div>
+    </li>
+    <li>
+        <a class="uk-accordion-title" href="#">step 3</a>
+        <div class="uk-accordion-content">
+
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+
+       </div>
+    </li>
+
+ <li>
+        <a class="uk-accordion-title" href="#">step 4</a>
+        <div class="uk-accordion-content">
+
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+
+       </div>
+    </li>
+
+ <li>
+        <a class="uk-accordion-title" href="#">step 5</a>
+        <div class="uk-accordion-content">
+
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+
+       </div>
+    </li>
+
+
+ <li>
+        <a class="uk-accordion-title" href="#">step 6</a>
+        <div class="uk-accordion-content">
+
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+
+       </div>
+    </li>
+
+
+ <li>
+        <a class="uk-accordion-title" href="#">step 7</a>
+        <div class="uk-accordion-content">
+
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+
+       </div>
+    </li>
+
+ <li>
+        <a class="uk-accordion-title" href="#">step 8</a>
+        <div class="uk-accordion-content">
+
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+
+       </div>
+    </li>
+
+ <li>
+        <a class="uk-accordion-title" href="#">step 9</a>
+        <div class="uk-accordion-content">
+
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+
+       </div>
+    </li>
+
+
+ <li>
+        <a class="uk-accordion-title" href="#">step 10</a>
+        <div class="uk-accordion-content">
+
+
+   <div>
+      <label for="recipe-title">Title</label>
+      <input type="text" id="recipe-title" name="recipe-title" />
+    </div>
+    <div>
+      <label for="recipe-url">Link</label>
+      <input id="recipe-url" name="recipe-url" />
+    </div>
+
+
+
+       </div>
+    </li>
+
+
+
+</ul>
+
+
     <button type="submit" class="btn">Create</button>
+  
+  
+
+  
+  
   </form>
+
+
+
 </section>
 
 {{#if posts.length}}
@@ -27,3 +228,11 @@
   </ol>
 </section>
 {{/if}}
+
+
+
+
+
+
+<script src="/javascript/generate-steps.js"></script>
+<script src="/javascript/add-post.js"></script>
