--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Just Recipes</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.14.3/dist/css/uikit.min.css" />
+
     <link rel="stylesheet" href="/stylesheet/style.css">
 </head>
 
@@ -44,3 +46,5 @@
 
 </html>
  <script src="/javascript/edamam-api.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/uikit@3.14.3/dist/js/uikit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/uikit@3.14.3/dist/js/uikit-icons.min.js"></script>
