--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,195 +7,209 @@
       <input type="text" id="recipe-title" name="recipe-title" />
     </div>
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="cook-time">estimated cook time</label>
+      <input id="cook-time" name="cook-time" />
     </div>
 
 
 <ul uk-accordion="multiple: true">
-    <li class="uk-open">
-        <a class="uk-accordion-title" href="#">Step 1</a>
+    <li class="uk-closed">
+        <a class="uk-accordion-title " href="#">Step 1</a>
         <div class="uk-accordion-content">
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
+    </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
     </div>
 
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step</label>
+      <input id="step-url" name="step-url" />
     </div>
            </div>
     </li>
-    <li>
+   <li class="uk-closed">
         <a class="uk-accordion-title" href="#">Step 2</a>
         <div class="uk-accordion-content">
-
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
     </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
+    </div>
+
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
     </div>
-
-
-        </div>
+           </div>
     </li>
-    <li>
-        <a class="uk-accordion-title" href="#">step 3</a>
+      <li class="uk-closed">
+        <a class="uk-accordion-title" href="#">Step 3</a>
         <div class="uk-accordion-content">
-
-
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
     </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
+    </div>
+
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
     </div>
-
-
-
-       </div>
-    </li>
-
- <li>
-        <a class="uk-accordion-title" href="#">step 4</a>
-        <div class="uk-accordion-content">
-
-
-   <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
-    </div>
-    <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
-    </div>
-
-
-
-       </div>
+           </div>
     </li>
 
- <li>
-        <a class="uk-accordion-title" href="#">step 5</a>
+    <li class="uk-closed">
+        <a class="uk-accordion-title" href="#">Step 4</a>
         <div class="uk-accordion-content">
-
-
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
     </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
+    </div>
+
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
     </div>
-
-
-
-       </div>
+           </div>
     </li>
-
-
- <li>
-        <a class="uk-accordion-title" href="#">step 6</a>
+   <li class="uk-closed">
+        <a class="uk-accordion-title" href="#">Step 5</a>
         <div class="uk-accordion-content">
-
-
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
     </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
+    </div>
+
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
     </div>
-
-
-
-       </div>
+           </div>
     </li>
 
 
- <li>
-        <a class="uk-accordion-title" href="#">step 7</a>
+    <li class="uk-closed">
+        <a class="uk-accordion-title" href="#">Step 6</a>
         <div class="uk-accordion-content">
-
-
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
     </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
+    </div>
+
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
     </div>
-
-
-
-       </div>
+           </div>
     </li>
 
- <li>
-        <a class="uk-accordion-title" href="#">step 8</a>
+    <li class="uk-closed">
+        <a class="uk-accordion-title" href="#">Step 7</a>
         <div class="uk-accordion-content">
-
-
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
     </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
+    </div>
+
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
     </div>
-
-
-
-       </div>
+           </div>
     </li>
 
- <li>
-        <a class="uk-accordion-title" href="#">step 9</a>
+    <li class="uk-closed">
+        <a class="uk-accordion-title" href="#">Step 8</a>
         <div class="uk-accordion-content">
-
-
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
     </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
+    </div>
+
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
+    </div>
+           </div>
+    </li>
+
+    <li class="uk-closed">
+        <a class="uk-accordion-title" href="#">Step 9</a>
+        <div class="uk-accordion-content">
+   <div>
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
+    </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
     </div>
 
 
-
-       </div>
+    <div>
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
+    </div>
+           </div>
     </li>
 
 
- <li>
-        <a class="uk-accordion-title" href="#">step 10</a>
+    <li class="uk-closed">
+        <a class="uk-accordion-title" href="#">Step 10</a>
         <div class="uk-accordion-content">
-
-
    <div>
-      <label for="recipe-title">Title</label>
-      <input type="text" id="recipe-title" name="recipe-title" />
+      <label for="ingredient-title">ingredient</label>
+      <input type="text" id="ingredient-title" name="ingredient-title" />
     </div>
+ <div>
+      <label for="measurement-title">measurement</label>
+      <input type="text" id="measurement-title" name="measurement-title" />
+    </div>
+
+
     <div>
-      <label for="recipe-url">Link</label>
-      <input id="recipe-url" name="recipe-url" />
+      <label for="step-url">step description</label>
+      <input id="step-url" name="step-url" />
     </div>
-
-
-
-       </div>
+           </div>
     </li>
 
 
@@ -234,5 +248,5 @@
 
 
 
-<script src="/javascript/generate-steps.js"></script>
+
 <script src="/javascript/add-post.js"></script>
