--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,10 +6,7 @@
       <label for="recipe-title">Title</label>
       <input type="text" id="recipe-title" name="recipe-title" />
     </div>
-    <div>
-      <label for="cook-time">estimated cook time</label>
-      <input id="cook-time" name="cook-time" />
-    </div>
+  
 
 
 <ul uk-accordion="multiple: true">
@@ -27,8 +24,8 @@
 
 
     <div>
-      <label for="step-url">step</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -46,8 +43,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -65,8 +62,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -85,8 +82,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -104,8 +101,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -125,8 +122,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -145,8 +142,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -165,8 +162,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -185,8 +182,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
@@ -206,8 +203,8 @@
 
 
     <div>
-      <label for="step-url">step description</label>
-      <input id="step-url" name="step-url" />
+      <label for="step_text">step description</label>
+      <input id="step_text" name="step_text" />
     </div>
            </div>
     </li>
