--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,7 +24,7 @@
 
 
     <div>
-      <label for="step_text">step</label>
+      <label for="step_text">step description</label>
       <input id="step_text" name="step_text" />
     </div>
            </div>
