added certain classes for button handling

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -214,7 +214,7 @@
     </ul>
 
 
-    <button type="submit" class="btn">Create</button>
+    <button type="submit" class="btn new-post-form">Create</button>
 
 
 
