added basic color scheme in css

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,15 +15,15 @@
 <body>
     <header>
         <h1>
-            <a href="/">Just Recipes</a>
+            <a href="/" id="main-title">Just Recipes</a>
         </h1>
 
         <nav>
             {{#if loggedIn}}
-            <a href="/dashboard">dashboard</a>
+            <a href="/dashboard" id="dashboard-link">dashboard</a>
             <button id="logout" class="btn-no-style">logout</button>
             {{else }}
-            <a href="/login">login</a>
+            <a href="/login" id="login-btn">login</a>
             {{/if }}
             <button id="search-btn">Search</button>
             <input type="text" id="search-input" />
