--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,8 +1,8 @@
 {{> post-info post}}
 
 <div>
-    <h2>{{post.title}}</h2>
-    <p>{{post.post_text}}</p>
+    <h2 id="post-title">{{post.title}}</h2>
+    <p id="post-info">{{post.post_text}}</p>
 </div>
 
 {{#if loggedIn}}
