--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,9 +1,9 @@
 <section>
-  <h2>Add New Recipe</h2>
+  <h2 id="new-recipe">Add New Recipe</h2>
 
   <form class="new-recipe-form">
     <div>
-      <label for="recipe-title">Title</label>
+      <label for="recipe-title" id="recipe-title">Title</label>
       <input type="text" id="recipe-title" name="recipe-title" />
     </div>
 
@@ -11,178 +11,97 @@
 
     <ul uk-accordion="multiple: true">
       <li class="uk-closed">
-        <a class="uk-accordion-title " href="#">Step 1</a>
+        <a class="uk-accordion-title " href="#" id="steps">Step 1</a>
         <div class="uk-accordion-content">
           <div>
-            <label for="ingredient-title">ingredient</label>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
             <input type="text" id="ingredient-title" name="ingredient-title" />
           </div>
           <div>
-            <label for="measurement-title">measurement</label>
-            <input type="text" id="measurement-title" name="measurement-title" />
-          </div>
-
-
-    <div>
-      <label for="step_text">step description</label>
-      <input id="step_text" name="step_text" />
-    </div>
-      </div>
-    </li>
-   <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 2</a>
-        <div class="uk-accordion-content">
-          <div>
-            <label for="ingredient-title">ingredient</label>
-            <input type="text" id="ingredient-title" name="ingredient-title" />
-          </div>
-          <div>
-            <label for="measurement-title">measurement</label>
+            <label for="measurement-title" id="measurement">measurement</label>
             <input type="text" id="measurement-title" name="measurement-title" />
           </div>
 
 
           <div>
-            <label for="step_text">step description</label>
+            <label for="step_text" id="step-description">step description</label>
             <input id="step_text" name="step_text" />
           </div>
         </div>
       </li>
       <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 3</a>
+        <a class="uk-accordion-title" href="#" id="steps">Step 2</a>
         <div class="uk-accordion-content">
           <div>
-            <label for="ingredient-title">ingredient</label>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
             <input type="text" id="ingredient-title" name="ingredient-title" />
           </div>
           <div>
-            <label for="measurement-title">measurement</label>
+            <label for="measurement-title" id="measurement">measurement</label>
             <input type="text" id="measurement-title" name="measurement-title" />
           </div>
 
 
           <div>
-            <label for="step_text">step description</label>
-            <input id="step_text" name="step_text" />
-          </div>
-        </div>
-      </li>
-
-      <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 4</a>
-        <div class="uk-accordion-content">
-          <div>
-            <label for="ingredient-title">ingredient</label>
-            <input type="text" id="ingredient-title" name="ingredient-title" />
-          </div>
-          <div>
-            <label for="measurement-title">measurement</label>
-            <input type="text" id="measurement-title" name="measurement-title" />
-          </div>
-
-
-          <div>
-            <label for="step_text">step description</label>
+            <label for="step_text" id="step-description">step description</label>
             <input id="step_text" name="step_text" />
           </div>
         </div>
       </li>
       <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 5</a>
+        <a class="uk-accordion-title" href="#" id="steps">Step 3</a>
         <div class="uk-accordion-content">
           <div>
-            <label for="ingredient-title">ingredient</label>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
             <input type="text" id="ingredient-title" name="ingredient-title" />
           </div>
           <div>
-            <label for="measurement-title">measurement</label>
+            <label for="measurement-title" id="measurement">measurement</label>
             <input type="text" id="measurement-title" name="measurement-title" />
           </div>
 
 
           <div>
-            <label for="step_text">step description</label>
-            <input id="step_text" name="step_text" />
-          </div>
-        </div>
-      </li>
-
-
-      <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 6</a>
-        <div class="uk-accordion-content">
-          <div>
-            <label for="ingredient-title">ingredient</label>
-            <input type="text" id="ingredient-title" name="ingredient-title" />
-          </div>
-          <div>
-            <label for="measurement-title">measurement</label>
-            <input type="text" id="measurement-title" name="measurement-title" />
-          </div>
-
-
-          <div>
-            <label for="step_text">step description</label>
+            <label for="step_text" id="step-description">step description</label>
             <input id="step_text" name="step_text" />
           </div>
         </div>
       </li>
 
       <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 7</a>
+        <a class="uk-accordion-title" href="#" id="steps">Step 4</a>
         <div class="uk-accordion-content">
           <div>
-            <label for="ingredient-title">ingredient</label>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
             <input type="text" id="ingredient-title" name="ingredient-title" />
           </div>
           <div>
-            <label for="measurement-title">measurement</label>
+            <label for="measurement-title" id="measurement">measurement</label>
             <input type="text" id="measurement-title" name="measurement-title" />
           </div>
 
 
           <div>
-            <label for="step_text">step description</label>
+            <label for="step_text" id="step-description">step description</label>
             <input id="step_text" name="step_text" />
           </div>
         </div>
       </li>
-
       <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 8</a>
+        <a class="uk-accordion-title" href="#" id="steps">Step 5</a>
         <div class="uk-accordion-content">
           <div>
-            <label for="ingredient-title">ingredient</label>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
             <input type="text" id="ingredient-title" name="ingredient-title" />
           </div>
           <div>
-            <label for="measurement-title">measurement</label>
+            <label for="measurement-title" id="measurement">measurement</label>
             <input type="text" id="measurement-title" name="measurement-title" />
           </div>
 
 
           <div>
-            <label for="step_text">step description</label>
-            <input id="step_text" name="step_text" />
-          </div>
-        </div>
-      </li>
-
-      <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 9</a>
-        <div class="uk-accordion-content">
-          <div>
-            <label for="ingredient-title">ingredient</label>
-            <input type="text" id="ingredient-title" name="ingredient-title" />
-          </div>
-          <div>
-            <label for="measurement-title">measurement</label>
-            <input type="text" id="measurement-title" name="measurement-title" />
-          </div>
-
-
-          <div>
-            <label for="step_text">step description</label>
+            <label for="step_text" id="step-description">step description</label>
             <input id="step_text" name="step_text" />
           </div>
         </div>
@@ -190,20 +109,101 @@
 
 
       <li class="uk-closed">
-        <a class="uk-accordion-title" href="#">Step 10</a>
+        <a class="uk-accordion-title" href="#" id="steps">Step 6</a>
         <div class="uk-accordion-content">
           <div>
-            <label for="ingredient-title">ingredient</label>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
             <input type="text" id="ingredient-title" name="ingredient-title" />
           </div>
           <div>
-            <label for="measurement-title">measurement</label>
+            <label for="measurement-title" id="measurement">measurement</label>
             <input type="text" id="measurement-title" name="measurement-title" />
           </div>
 
 
           <div>
-            <label for="step_text">step description</label>
+            <label for="step_text" id="step-description">step description</label>
+            <input id="step_text" name="step_text" />
+          </div>
+        </div>
+      </li>
+
+      <li class="uk-closed">
+        <a class="uk-accordion-title" href="#" id="steps">Step 7</a>
+        <div class="uk-accordion-content">
+          <div>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
+            <input type="text" id="ingredient-title" name="ingredient-title" />
+          </div>
+          <div>
+            <label for="measurement-title" id="measurement">measurement</label>
+            <input type="text" id="measurement-title" name="measurement-title" />
+          </div>
+
+
+          <div>
+            <label for="step_text" id="step-description">step description</label>
+            <input id="step_text" name="step_text" />
+          </div>
+        </div>
+      </li>
+
+      <li class="uk-closed">
+        <a class="uk-accordion-title" href="#" id="steps">Step 8</a>
+        <div class="uk-accordion-content">
+          <div>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
+            <input type="text" id="ingredient-title" name="ingredient-title" />
+          </div>
+          <div>
+            <label for="measurement-title" id="measurement">measurement</label>
+            <input type="text" id="measurement-title" name="measurement-title" />
+          </div>
+
+
+          <div>
+            <label for="step_text" id="step-description">step description</label>
+            <input id="step_text" name="step_text" />
+          </div>
+        </div>
+      </li>
+
+      <li class="uk-closed">
+        <a class="uk-accordion-title" href="#" id="steps">Step 9</a>
+        <div class="uk-accordion-content">
+          <div>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
+            <input type="text" id="ingredient-title" name="ingredient-title" />
+          </div>
+          <div>
+            <label for="measurement-title" id="measurement">measurement</label>
+            <input type="text" id="measurement-title" name="measurement-title" />
+          </div>
+
+
+          <div>
+            <label for="step_text" id="step-description">step description</label>
+            <input id="step_text" name="step_text" />
+          </div>
+        </div>
+      </li>
+
+
+      <li class="uk-closed">
+        <a class="uk-accordion-title" href="#" id="steps">Step 10</a>
+        <div class="uk-accordion-content">
+          <div>
+            <label for="ingredient-title" id="ingredient">ingredient</label>
+            <input type="text" id="ingredient-title" name="ingredient-title" />
+          </div>
+          <div>
+            <label for="measurement-title" id="measurement">measurement</label>
+            <input type="text" id="measurement-title" name="measurement-title" />
+          </div>
+
+
+          <div>
+            <label for="step_text" id="step-description">step description</label>
             <input id="step_text" name="step_text" />
           </div>
         </div>
@@ -214,7 +214,7 @@
     </ul>
 
 
-    <button type="submit" class="btn">Create</button>
+    <button type="submit" class="btn" id="create-btn">Create</button>
 
 
 
