--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,32 +1,32 @@
 <form class="login-form">
   <div>
-    <label for="email-login">email:</label>
+    <label for="email-login" id="email">email:</label>
     <input type="text" id="email-login" />
   </div>
   <div>
-    <label for="password-login">password:</label>
+    <label for="password-login" id="password">password:</label>
     <input type="password" id="password-login" />
   </div>
   <div>
-    <button type="submit">login</button>
+    <button type="submit" id="login-btn">login</button>
   </div>
 </form>
 
 <form class="signup-form">
   <div>
-    <label for="username-signup">username:</label>
+    <label for="username-signup" id="username">username:</label>
     <input type="text" id="username-signup" />
   </div>
   <div>
-    <label for="email-signup">email:</label>
+    <label for="email-signup" id="email">email:</label>
     <input type="text" id="email-signup" />
   </div>
   <div>
-    <label for="password-signup">password:</label>
+    <label for="password-signup" id="password">password:</label>
     <input type="password" id="password-signup" />
   </div>
   <div>
-    <button type="submit">Signup</button>
+    <button type="submit" id="signup-btn">Signup</button>
   </div>
 </form>
 
