--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,10 +1,10 @@
 <div class="comments">
   {{#each this}}
   <section class="comment">
-    <div class="meta">
+    <div class="meta" id="user-comment">
       {{user.username}} on {{format_date created_at}}
     </div>
-    <div class="text">
+    <div class="text" id="comment-text">
       {{comment_text}}
     </div>
   </section>
