--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <ol class="post-list">
     {{#each posts as |post|}}
-  <li>
+  <li id="list-number">
     {{> post-info post}}
   </li>
   {{/each}}
