--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -3,7 +3,7 @@
 <div>
     <h2>{{post.title}}</h2>
     <p>{{post.post_text}}</p>
-
+    <p>{{ingredients.ingredients}}</p>
 </div>
 
 {{#if loggedIn}}
