fixed steps routes! thanks Jesse!

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -3,6 +3,9 @@
 <div>
     <h2 id="post-title">{{post.title}}</h2>
     <p id="post-info">{{post.post_text}}</p>
+      <p id="post-info">{{ingredients.ingredient}}</p>
+        <p id="post-info">{{ingredients.measurement}}</p>
+         <p id="post-info">{{step.step_text}}</p>
 </div>
 
 {{#if loggedIn}}
