got ingredients and steps to post, still cant get post to post from the dashboard browser,added to add-post.js got ingredients and steps fetch successfully

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -15,17 +15,17 @@
         <div class="uk-accordion-content">
           <div>
             <label for="ingredient-title" id="ingredient">ingredient</label>
-            <input type="text" id="ingredient-title" name="ingredient-title" />
+            <input type="text" id="ingredient-title" name="ingredient-title1" />
           </div>
           <div>
             <label for="measurement-title" id="measurement">measurement</label>
-            <input type="text" id="measurement-title" name="measurement-title" />
+            <input type="text" id="measurement-title" name="measurement-title1" />
           </div>
 
 
           <div>
             <label for="step_text" id="step-description">step description</label>
-            <input id="step_text" name="step_text" />
+            <input id="step_text" name="step_text1" />
           </div>
         </div>
       </li>
