post post route working in insomnia atleast

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,7 @@
 <article class="post">
       <div class="title">
         <a href="/post/{{id}}" target="_blank" id="post-title">{{title}}</a>
-        <span id="post-info">({{format_url post_text}})</span>
+        <span id="post-info">({{format_url title}})</span>
       </div>
       <div class="meta" id="upvotes">
         {{vote_count}} {{format_plural "point" vote_count}} by {{user.username}} on
